# LobsterCodexSwitcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  codex-switcher.py  codex_switcher.py  install.py  pyproject.toml
.codex/skills/codex-switcher-help/: SKILL.md
.codex/skills/codex-switcher-help/examples/: agent-usage.md  user-usage.md
.codex/skills/codex-switcher-help/references/: cli.md  deploy.md
.github/workflows/: release-and-homebrew.yml
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.3.md  v0.1.4.md  v0.1.6.md  v0.1.9.md  v0.2.0.md
openspec/changes/add-cli-skill-and-global-install/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-cli-skill-and-global-install/specs/agent-cli-commands/: spec.md
openspec/changes/add-cli-skill-and-global-install/specs/global-install-paths/: spec.md
openspec/changes/add-cli-skill-and-global-install/specs/project-local-skill/: spec.md
openspec/changes/add-release-assets-and-homebrew-install/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-release-assets-and-homebrew-install/specs/homebrew-install/: spec.md
openspec/changes/add-release-assets-and-homebrew-install/specs/release-assets/: spec.md
openspec/changes/refresh-saved-account-usage/: README.md  design.md  proposal.md  tasks.md
openspec/changes/refresh-saved-account-usage/specs/archived-account-usage-refresh/: spec.md
tests/: test_proxy_sync.py
