[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-codex-switcher"
version = "0.2.0"
description = "Lobster-focused Codex account switcher with local proxy sync and agent-friendly CLI commands"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "sunflower225" }
]
scripts = { codex-switcher = "codex_switcher:main", csw = "codex_switcher:main" }

[tool.setuptools]
py-modules = ["codex_switcher"]
